Fix logo alignment on Safari

--- a/static/src/stylesheets/layout/new-header/_new-header.scss
+++ b/static/src/stylesheets/layout/new-header/_new-header.scss
@@ -31,15 +31,15 @@ from scrolling */
 }
 
 .new-header__logo {
-    padding-top: $gs-baseline / 2;
-    padding-bottom: $gs-baseline / 2;
     margin-left: auto;
 }
 
 .new-header__logo .inline-logo__svg {
     display: block;
     height: calc(3 / 16 * 170px);
-    padding-right: $gs-gutter / 2;
+    margin-bottom: $gs-baseline / 2;
+    margin-right: $gs-gutter / 2;
+    margin-top: $gs-baseline;
     width: 170px;
 
     @include mq(mobileMedium) {
@@ -49,8 +49,7 @@ from scrolling */
 
     @include mq(mobileLandscape) {
         height: calc(3 / 16 * 260px);
-        margin-right: $gs-gutter / 2;
-        padding-top: ($gs-baseline / 2);
+        margin-right: $gs-gutter;
         width: 260px;
     }
 
